Add bootstrap and style views

--- a/app/views/layouts/_user_widget.html.erb
+++ b/app/views/layouts/_user_widget.html.erb
@@ -1,7 +1,11 @@
-<% if user_signed_in? %>
-  <p>Welcome <%= current_user.email %></p>
-  <%= link_to 'Logged In [click to logout]', destroy_user_session_path, :method => :delete %>
-<% else %>
-  <p>You are not signed in.</p>
-  <%= link_to 'Login', new_user_session_path %>
-<% end %>
+<nav>
+	<ul class="nav masthead-nav">
+		<% if user_signed_in? %>
+			<li>Welcome <%= current_user.email %></li>
+			<li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
+		<% else %>
+			<li><%= link_to "Sign up", new_user_registration_path %></li>
+			<li><%= link_to 'Login', new_user_session_path %></li>
+		<% end %>
+	</ul>
+</nav>
