--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,6 +1,9 @@
 <h1>ArtistFinder</h1>
-<%= form_tag({controller: "artist_finder", action: "search"}, method: "get") do %>
-  <%= label_tag(:artistsearch, "Search for:") %>
-  <%= text_field_tag(:artistsearch, nil, placeholder: "Search for any artist") %>
-  <%= submit_tag("Search") %>
+<%= form_tag({controller: "artist_finder", action: "search"}, method: "get", id: "search") do %>
+<p>
+  <div class="input-group">
+	  <%= text_field_tag(:artistsearch, nil, placeholder: "Search for any artist", class: "form-control") %>
+	  <span class="glyphicon glyphicon-search input-group-addon" aria-hidden="true"></span>
+  </div>
+</p>
 <% end %>
