Add url to history and fix search page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,7 +21,7 @@ body {
   height: 100%;
   background-image: url('/images/cover.jpg');
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
   background-attachment: fixed;
 }
 body {
@@ -108,6 +108,11 @@ body {
 	position: relative;
 	top: 85px;
 	text-align: left;
+}
+
+.search {
+	padding-left: 25px;
+	padding-top: 25px;
 }
 
 @media (min-width: 768px) {
