--- a/app/views/history/searchhistory.html.erb
+++ b/app/views/history/searchhistory.html.erb
@@ -1,4 +1,4 @@
-<h1>Search History</h1>
+<div class="panel-heading"><h1>Search History</h1></div>
 <% @history.each do |search| %>
   <p><%= search['name'] %></p>
 <% end %>
