--- a/app/views/layouts/_user_widget.html.erb
+++ b/app/views/layouts/_user_widget.html.erb
@@ -1,7 +1,8 @@
 <nav>
 	<ul class="nav masthead-nav">
 		<% if user_signed_in? %>
-			<li>Welcome <%= current_user.email %></li>
+			<li><%= link_to 'History', history_searchhistory_path %></li>
+			<li><%= link_to 'Edit account', edit_user_registration_path %></li>
 			<li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
 		<% else %>
 			<li><%= link_to "Sign up", new_user_registration_path %></li>
