Fix history page and js

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -7,3 +7,10 @@
   </div>
 </p>
 <% end %>
+<script type="text/javascript">
+$(function() {
+	$(".glyphicon-search").click(function() {
+		$("#search").submit();
+	});
+});
+</script>
