Add error messages

--- a/app/views/artist_finder/search.html.erb
+++ b/app/views/artist_finder/search.html.erb
@@ -13,7 +13,7 @@
 
 	<% else %>
 
-		<p>Couldn't find anything. Try searching <%= link_to "again", root_path %></p>
+		<p>Couldn't find anything. Try searching <%= link_to "again", search_path %></p>
 
 	<% end %>
 
