--- a/app/views/history/searchhistory.html.erb
+++ b/app/views/history/searchhistory.html.erb
@@ -7,7 +7,7 @@
 
 	<% if @history.count == 0 %>
 
-		<p>You haven't searched for anything yet! Start <%= link_to "searching", root_path %></p>
+		<p>You haven't searched for anything yet! Start <%= link_to "searching", search_path %></p>
 
 	<% end %>
 
