--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -124,6 +124,15 @@ body {
 	padding: 0px 5px;
 }
 
+.modal-content {
+  padding: 20px;
+  color: #D9534F;
+  .notice {
+    color: #99CC72;
+  }
+  text-shadow: none;  
+}
+
 @media (min-width: 768px) {
   /* Pull out the header and footer */
   .masthead {
