--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,8 +1,22 @@
 <h2>Change your password</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+<% if devise_error_messages!.empty? %>
+<% else %>
+<div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <%= devise_error_messages! %>
+      <script type="text/javascript">
+      $(function() {
+        $('#myModal').modal('show');
+      });
+      </script>
+    </div>
+  </div>
+</div>
+<% end %>
+ <%= f.hidden_field :reset_password_token %>
 
   <div class="form-group">
   	<%= f.label :password, "New password" %><br />
