--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,21 @@
 <div class="panel-heading"><h2>Edit <%= resource_name.to_s.humanize %></h2></div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+<% if devise_error_messages!.empty? %>
+<% else %>
+<div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <%= devise_error_messages! %>
+      <script type="text/javascript">
+      $(function() {
+        $('#myModal').modal('show');
+      });
+      </script>
+    </div>
+  </div>
+</div>
+<% end %>
 
   <div class="form-group">
     <%= f.label :email %><br />
