--- a/app/views/layouts/_user_widget.html.erb
+++ b/app/views/layouts/_user_widget.html.erb
@@ -1,6 +1,7 @@
 <nav>
 	<ul class="nav masthead-nav">
 		<% if user_signed_in? %>
+			<li><%= link_to 'Search', search_path %></li>
 			<li><%= link_to 'History', history_searchhistory_path %></li>
 			<li><%= link_to 'About', about_path %></li>
 			<li><%= link_to 'Edit account', edit_user_registration_path %></li>
